api connect second stage
